# EidotEngine

./: CMakeLists.txt  README.md
src/: main.cpp
src/EidotEngine/: Camera.cpp  Camera.h  Color.cpp  Color.h  GraphicObject.cpp  GraphicObject.h  Render.cpp  Render.h  RenderObject.cpp  RenderObject.h  Scena.cpp  Scena.h  Surface.cpp  Surface.h  Transform.cpp  Transform.h  Vectors.cpp  Vectors.h
